* BUG: 1771759 - Wide Table Scrollbars.   Changed overflow:hidden; to overflow:auto for #TopicBody style.
git-svn-id: https://flexwiki.svn.sourceforge.net/svnroot/flexwiki/flexwikicore/trunk@693 662ad2f3-a61f-0410-a8b9-97bb17fbd72e

--- a/FlexWiki.Web/wiki.css
+++ b/FlexWiki.Web/wiki.css
@@ -1,4 +1,4 @@
-/* General */
+﻿/* General */
 html, body {
 height:100%;
 }
@@ -81,7 +81,7 @@ display:inline-block;
 float:left;
 min-height:99.5%;
 padding:4px;
-overflow:hidden;
+overflow:auto;
 width:59.9%;
 }
 /* Topic Bar */
